# projeto_coleta

./: pyproject.toml  requirements.txt
